SONARJAVA-6413 Implement BeanDefinitionGatherer to collect Spring bean definitions (#5665)
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>